# sbox-common

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
docs/adr/: ADR-0001-core-architecture.md
examples/: agent_config.yaml  api_request.json
plans/: README.md
plans/docs/: README.md  integration-plan.md  parallel-development-plan.md
plans/docs/phases/: foundation.md  phase-1-foundation.md  phase-2-runtime.md  phase-3-advanced.md
plans/implementation/: phase-2-business-logic.md
protocols/: api.schema.json
protocols/interface/: sboxmgr-agent.schema.json
schemas/: agent_config.json  base-config.schema.json  clash.schema.json  mihomo.schema.json  xray.schema.json
scripts/: sync-schemas.sh  test_schema.py
src/sbox_common/: __init__.py
src/sbox_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sbox_common/protocols/: __init__.py  converters.py
src/sbox_common/protocols/events/: config-events.json  health-events.json  subscription-events.json
src/sbox_common/protocols/socket/: __init__.py  framed_json.py  protocol_v1.schema.json
tests/: test_event_protocols.py  test_socket_protocol.py
